Fixed squashed avatars in element index tables

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2500,6 +2500,7 @@ $elementInnerSpacing: 5px;
       img {
         display: block;
         flex-shrink: 0;
+        flex-grow: 1;
         pointer-events: none;
         border-radius: $smallBorderRadius;
         max-width: 100%;
